--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,10 +11,14 @@
  * It is generally better to create a new file per style scope.
  *
  */
+ * {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+ }
 
  .navbar {
     overflow: hidden;
     background-color: #333;
+    padding: 0.5em;
     list-style-type: none; /* Removes bullet points */
     color: #fff;
     text-decoration: none;
@@ -29,6 +33,13 @@
     padding: 14px 20px;
     text-decoration: none;
   }
+
+  a {
+    color: #f2f2f2;
+    font-size: medium;
+    padding: 1em;
+    margin: 1em;
+  }
   
   /* Change the color of links on hover */
   .navbar-link:hover {
@@ -41,8 +52,7 @@
     text-align: center;
     font-size: 50px;
     margin-top: 0px;
-    margin-bottom: 0px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;    
+    margin-bottom: 0px;   
   }
   
  /* Footer style */
