replaced home with pix share on navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,6 +39,7 @@
     font-size: medium;
     padding: 1em;
     margin: 1em;
+    text-decoration: none;
   }
   
   /* Change the color of links on hover */
