--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
 <!-- _navbar.html.erb -->
 <nav class="navbar">
   <div class="nav-content">
-    <a><%= link_to "Home", root_path %></a>
+    <a><%= link_to "Pix Share", root_path %></a>
     <a><%= link_to "Upload Photo", new_photo_path %></a>
     <% if user_signed_in? %>
       <a><%= link_to "My Profile", user_path(current_user) %></a>
