added toggle menu and logo on navbar

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,4 @@
-<h1 class="title">Pix Share</h1>
+<div class="d-flex align-items-center justify-content-center">
+    <h1 class="title">Pix Share</h1>
+</div>
 <p>Find me in app/views/home/index.html.erb</p>
