--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,68 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  */
- * {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
- }
 
- .navbar {
-    overflow: hidden;
-    background-color: #333;
-    padding: 0.5em;
-    list-style-type: none; /* Removes bullet points */
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  /* Style the links inside the navigation bar */
-  .navbar-link {
-    float: left;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-  }
-
-  a {
-    color: #f2f2f2;
-    font-size: medium;
-    padding: 1em;
-    margin: 1em;
-    text-decoration: none;
-  }
-  
-  /* Change the color of links on hover */
-  .navbar-link:hover {
-    background-color: #ddd;
-    color: black;
-  }
-
-  .title {
-    color: #333;
-    text-align: center;
-    font-size: 50px;
-    margin-top: 0px;
-    margin-bottom: 0px;   
-  }
-  
- /* Footer style */
-.footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #f4f4f4;
-    color: #757575;
-    padding: 15px;
-  }
-  
-  /* Style for footer text */
-  .footer-text {
-    display: inline-block;
-    margin: 0 10px;
-  }
-  
+@import 'bootstrap';
+ 
+ 
