--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,27 +1,26 @@
 <!-- _navbar.html.erb -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-   <%= link_to root_path, class: "navbar-brand" do %>
-  <%= image_tag("ps-icon.png", alt: "Pix Share Logo", class: "logo-image", style: "max-height:50px; max-width:100px; border-radius: 10px;") %>
-<% end %>
+    <%= link_to root_path, class: "navbar-brand" do %>
+      <%= image_tag("ps-icon.png", alt: "Pix Share Logo", class: "logo-image", style: "max-height:50px; max-width:100px; border-radius: 10px;") %>
+    <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <div class="collapse navbar-collapse justify-content-between" id="navbarSupportedContent">
+      <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="<%= new_photo_path %>">Upload Photo</a>
         </li>
-        <li class="nav-item">
-          <form class="form-inline" action="<%= search_index_path %>">
-  <div class="input-group">
-    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success" type="submit">Search</button>
-  </div>
-</form>
+      </ul>
 
-        </li>
+      <form class="d-flex mx-auto">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+
+      <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item">
             <a class="nav-link" href="<%= user_path(current_user) %>">My Profile</a>
@@ -41,5 +40,4 @@
     </div>
   </div>
 </nav>
-
 
