--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -15,25 +15,33 @@
         </li>
       </ul>
 
-      <form class="d-flex mx-auto">
+      <form class="d-flex mx-auto" action="<%= search_index_path %>">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-outline-dark" type="submit">Search</button>
       </form>
 
       <ul class="navbar-nav">
         <% if user_signed_in? %>
           <li class="nav-item">
-            <a class="nav-link" href="<%= user_path(current_user) %>">My Profile</a>
+            <a class="nav-link" href="<%= user_path(current_user) %>">
+              <button class="btn btn-outline-dark" type="submit">My Profile</button>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="<%= destroy_user_session_path %>" data-method="delete">Logout</a>
+            <a class="nav-link" href="<%= destroy_user_session_path %>" data-method="delete">
+              <button class="btn btn-outline-dark" type="submit">Logout</button>
+            </a>
           </li>
         <% else %>
           <li class="nav-item">
-            <a class="nav-link" href="<%= new_user_registration_path %>">Sign Up</a>
+            <a class="nav-link" href="<%= new_user_registration_path %>">
+              <button class="btn btn-outline-dark" type="submit">Sign Up</button>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="<%= new_user_session_path %>">Login</a>
+            <a class="nav-link" href="<%= new_user_session_path %>">
+             <button class="btn btn-outline-dark" type="submit">Login</button>
+            </a>
           </li>
         <% end %>
       </ul>
