added avatar to logged in User profile

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,6 +16,11 @@
     <%= form.text_field :name %>
   </div>
 
+   <div>
+    <%= form.label :avatar, style: "display: block" %>
+    <%= form.file_field :avatar %>
+  </div>
+
   <div>
     <%= form.label :email, style: "display: block" %>
     <%= form.text_field :email %>
