--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,24 @@
-<h1><%= t('.forgot_your_password') %></h1>
+<div class="container" style="display: flex; justify-content: center; align-items: center; height: 50vh;">
+  <div class="card w-100" style="border-radius: 7px;">
+    <div class="card-header">
+      <h1><%= t('.forgot_your_password') %></h1>
+    </div>
+    <div class="card-body">
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+        <%= bootstrap_devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= bootstrap_devise_error_messages! %>
+        <div class="form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+        </div>
+      <br>
+        <div class="form-group">
+          <%= f.submit t('.send_me_reset_password_instructions'), class: 'btn btn-dark', style: "margin-bottom: 10px;" %>
+        </div>
+      <% end %>
 
-  <div class="form-group">
-    <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+      <%= render 'devise/shared/links' %>
+    
+    </div>
   </div>
-<br>
-  <div class="form-group">
-    <%= f.submit t('.send_me_reset_password_instructions'), class: 'btn btn-dark' %>
-  </div>
-<% end %>
-
-<%= render 'devise/shared/links' %>
+</div>
