--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -26,6 +26,11 @@
     <%= form.text_field :user_id %>
   </div>
 
+  <div class="field">
+    <%= form.label :image %>
+    <%= form.file_field :image %>
+  </div>
+  
   <div>
     <%= form.submit %>
   </div>
