--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,4 +1,10 @@
 <div id="<%= dom_id user %>">
+    <p>
+    <strong>Avatar:</strong>
+    <% if user.avatar.attached? %>
+      <%= image_tag user.avatar %>
+    <% end %>
+  </p>
   <p>
     <strong>Name:</strong>
     <%= user.name %>
