added avatar to navbar to show if user logged in has an avatar

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,7 +2,7 @@
     <p>
     <strong>Avatar:</strong>
     <% if user.avatar.attached? %>
-      <%= image_tag user.avatar %>
+      <%= image_tag user.avatar, width: "10%" %>
     <% end %>
   </p>
   <p>
