made navbar sticky-top and enabled multi photo uploads

--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -10,6 +10,15 @@
   </p>
 
   <p>
+    <strong>IMAGES:</strong>
+    <% if photo.images.attached? %>
+      <% photo.images.each do |image| %>
+        <%= image_tag image, width: "10%" %>
+      <% end %>
+    <% end %>
+  </p>
+
+  <p>
     <strong>User:</strong>
     <%= photo.user_id %>
   </p>
