--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <!-- _navbar.html.erb -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
   <div class="container-fluid">
     <%= link_to root_path, class: "navbar-brand" do %>
       <%= image_tag("ps-icon.png", alt: "Pix Share Logo", class: "logo-image", style: "max-height:50px; max-width:100px; border-radius: 10px;") %>
