--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -21,14 +21,14 @@
     <%= form.text_area :description %>
   </div>
 
-  <div>
+  <%# <div>
     <%= form.label :user_id, style: "display: block" %>
-    <%= form.text_field :user_id %>
-  </div>
+    <%# <%= form.text_field :user_id %> 
+  <%# </div> %>
 
   <div class="field">
-    <%= form.label :image %>
-    <%= form.file_field :image %>
+    <%= form.label :images %>
+    <%= form.file_field :images, multiple: true %>
   </div>
   
   <div>
