chnaged upload text to upload icon

--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -11,7 +11,11 @@
     <div class="collapse navbar-collapse align-items-center" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="<%= new_photo_path %>">Upload Photo</a>
+          <a class="nav-link" href="<%= new_photo_path %>">
+            <button type="button" class="btn btn-dark">
+              <%= bootstrap_icon "upload", width: 20, height: 20, fill: "white" %>
+            </button>
+          </a>
         </li>
       </ul>
 
