--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -32,23 +32,24 @@
 <%= render "form", photo: @photo %>
 
 <% if @photo.images.attached? %>
-  <h2>Edit Images</h2>
-  <div class="photo-images">
-    <% @photo.images.each_with_index do |image, index| %>
-      <div class="photo-item" style="border: 1px solid #ddd; border-radius: 5px; background: #f9f9f9; padding: 5px;">
-        <%= image_tag image, style: 'width: 100%; height: auto; margin-bottom: 10px;' %>
-        
-        <%= form_with(model: @photo, url: photo_path(id: @photo.id, image_id: index), method: :delete, local: true) do |form| %>
-          <%= form.hidden_field :authenticity_token, value: form_authenticity_token %>
-          <%= form.submit 'Delete', data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
-        <% end %>
-      </div>
-    <% end %>
-  </div>
+
+    <div class="photo-images mb-3">
+      <% @photo.images.each_with_index do |image, index| %>
+        <div class="photo-item" style="border: 1px solid #ddd; border-radius: 5px; background: #f9f9f9; padding: 5px;">
+          <%= image_tag image, style: 'width: 100%; height: auto; margin-bottom: 10px;' %>
+          
+          <%= form_with(model: @photo, url: photo_path(id: @photo.id, image_id: index), method: :delete, local: true) do |form| %>
+            <div class="mb-3">
+              <%= form.hidden_field :authenticity_token, value: form_authenticity_token %>
+            </div>
+            <div class="mb-3">
+              <%= form.submit 'Delete', data: { confirm: 'Are you sure?' }, class: 'btn btn-danger' %>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+    </div>
 <% end %>
-
-<br>
-
 <div>
   <%= link_to "Show this photo", @photo %> |
   <%= link_to "Back to photos", photos_path %>
