added bootstrap classes to all  buttons and formatted photos index.html.ern to show photos ina grid

--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to photos", photos_path %>
+  <%= link_to "Back", photos_path, class: "btn btn-secondary" %>
 </div>
