--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -2,14 +2,23 @@
 
 <h1>Photo Gallery</h1>
 
-<div id="photos">
+<div id="photos" class="photo-images">
   <% if @photos.any? { |photo| photo.images.attached? } %>
     <% @photos.each do |photo| %>
       <% if photo.images.attached? %>
-        <%= render photo %>
-        <p>
-          <%= link_to "Show this photo", photo %>
-        </p>
+        <div class="photo-item" style="border: 1px solid #ddd; border-radius: 5px; background: #f9f9f9; padding: 5px;">
+          <h2><%= photo.title %></h2>
+          <p><%= photo.description %></p>
+          <% photo.images.each_with_index do |image, index| %>
+            <div style="border: 1px solid #ddd; border-radius: 5px; background: #f9f9f9; padding: 5px;">
+              <%= image_tag image, style: 'width: 100%; height: auto; margin-bottom: 10px;' %>
+            </div>
+          <% end %>
+          <p>
+            <%= link_to "Show", photo, class: "btn btn-info" %>
+            <%= link_to "Edit", edit_photo_path(photo), class: 'btn btn-primary' %>
+          </p>
+        </div>
       <% end %>
     <% end %>
   <% else %>
@@ -17,4 +26,33 @@
   <% end %>
 </div>
 
-<%= link_to "New photo", new_photo_path %>
+<%= link_to "New photo", new_photo_path, class: "btn btn-dark" %>
+
+<style>
+  /* Mobile styles */
+  .photo-images {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+    align-items: center;
+    justify-items: center;
+  }
+
+  /* Desktop styles */
+  @media (min-width: 768px) {
+    .photo-images {
+      grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    }
+  }
+
+  /* Styles to limit the number of images per row to three on desktop */
+  @media (min-width: 1024px) {
+    .photo-images {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  
+  .photo-item {
+    margin: 10px;
+  }
+</style>
