--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -50,8 +50,11 @@
       <% end %>
     </div>
 <% end %>
-<div class="d-flex justify-content-between">
+<div class="d-flex justify-content-between mb-4">
   <%= link_to "Show", @photo, class: "btn btn-info" %>
   <%= link_to "Back", photos_path, class: "btn btn-secondary" %>
 </div>
-
+<br>
+<br>
+<br>
+<br>
