--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,10 @@
-<h1>Editing user</h1>
+<h1>Edit your profile</h1>
 
 <%= render "form", user: @user %>
 
 
 <br>
 
-<div>
-  <%= link_to "Show this user", @user %> |
-  <%= link_to "Back to users", users_path %>
+<div style="padding-bottom: 40px; display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+  <%= link_to "See profile", @user, class: "btn btn-outline-dark" %> 
 </div>
