--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,8 @@
 <!-- app/views/users/show.html.erb -->
 <%= render partial: 'user', locals: { user: @user, photo: @photo } %>
 
-<div>
-  <%# <%= link_to "Edit this user", edit_user_path(@user) %> 
-  <%# <%= link_to "Back to users", users_path %> 
+<div style="padding-bottom: 40px; display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+  <%= link_to "Edit", edit_user_path(@user), class: "btn btn-dark" %>
 
-  <%= button_to "Destroy this user", @user, method: :delete, class: "btn btn-danger", style: "margin-top: 10px;"%>
-
-
+  <!-- <%= button_to "Destroy this user", @user, method: :delete, class: "btn btn-danger" %> -->
 </div>
