change user profile upload button text

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div>
-          <a class="btn btn-dark btn-sm d-none d-md-block" href="<%= new_photo_path %>">Upload More</a>
+          <a class="btn btn-dark btn-sm d-none d-md-block" href="<%= new_photo_path %>">Upload Photos</a>
         </div>
       </div>
 
