--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -31,7 +31,7 @@
             <% end %>
           </li>
           <li class="nav-item me-3">
-            <a class="btn btn-outline-dark" href="<%= destroy_user_session_path %>" data-method="delete">Logout</a>
+            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-outline-dark" %>
           </li>
           <li class="nav-item">
             <%= link_to edit_user_registration_path, class: "nav-link" do %>
