--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,8 @@
-<div class="d-flex align-items-center justify-content-center">
-    <h1 class="title">Pix Share</h1>
+<div class="bg-light d-flex align-items-center justify-content-center m-0 p-0"
+     style="background-image: url('<%= asset_path('RomaniaCover.JPG') %>'); 
+            background-size: cover; background-repeat: no-repeat; background-color: red; 
+            width: 110vw; height: 110vh; overflow: hidden;">
+        <a href="<%= root_path %>" class="navbar-brand">
+            <%= image_tag('ps-logo.png', alt: 'Pix Share Logo', class: 'logo-image', style: 'max-height: 350px; max-width: 350px; border-radius: 10px;') %>
+        </a>
 </div>
