fixed view alignment issue

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
-<div class="bg-light d-flex align-items-center justify-content-center m-0 p-0"
+<div class="bg-light d-flex align-items-center justify-content-center"
      style="background-image: url('<%= asset_path('RomaniaCover.JPG') %>'); 
             background-size: cover; background-repeat: no-repeat; background-color: red; 
-            width: 110vw; height: 110vh; overflow: hidden;">
+            width: 110vw; height: 110vh; margin: 0; padding: 0; overflow-x: hidden;">
         <a href="<%= root_path %>" class="navbar-brand">
             <%= image_tag('ps-logo.png', alt: 'Pix Share Logo', class: 'logo-image', style: 'max-height: 350px; max-width: 350px; border-radius: 10px;') %>
         </a>
