changed the home page background image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
   </head>  
   <body>
     <%= render 'layouts/shared/navbar' %>
-    <div class="container>
+
+    <div class="container">
     <div class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
       <div class="d-flex">
         <div class="toast-body">
