--- a/app/views/layouts/shared/_footer.html.erb
+++ b/app/views/layouts/shared/_footer.html.erb
@@ -1,5 +1,6 @@
+<%= stylesheet_link_tag 'application' %>
 <!-- _footer.html.erb -->
-<div class="footer" style="display: flex; justify-content: center; align-items: center; position: fixed; left: 0; bottom: 0; width: 100%; background-color: #f4f4f4; color: #757575; padding: 8px;">
+<div class="footer">
   <div class="footer-content">
     <p class="footer-text" style="display: inline-block; margin: 0 10px;">A Mama Tech Project</p>
     <p class="footer-text" style="display: inline-block; margin: 0 10px;">Developer: <a href="https://github.com/nashthecoder" style="color: red; text-decoration: none;">Nash the Coder</a></p>
