--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,26 @@
 
  */
 
-/* @import 'bootstrap'; */
+@import 'bootstrap';
  
- 
+ .conatiner {
+    background-color: black;
+ }
+
+ footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 8vh;
+    background: #fff;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+}
+/* 
+justify-content: center; 
+align-items: center; 
+position: fixed; left: 0; bottom: 0; width: 100%; 
+background-color: #f4f4f4; color: #757575; padding: 8px; */
