--- a/app/views/layouts/shared/_navbar.html.erb
+++ b/app/views/layouts/shared/_navbar.html.erb
@@ -1,3 +1,4 @@
+<%= stylesheet_link_tag 'application' %>
 <nav class="navbar navbar-expand-lg sticky-top" style="display: flex; justify-content: center; align-items: center; position: fixed; left: 0; width: 100%; background-color: #ffffff; color: #757575; padding: 6px;">
   <div class="container-fluid">
     <%= link_to root_path, class: "navbar-brand" do %>
@@ -36,6 +37,7 @@
             <% end %>
           </li>
           <li class="nav-item me-3">
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
             <a rel="nofollow" data-method="delete" href="<%= destroy_user_session_path %>" class="btn btn-outline-dark">Logout</a>
           </li>
           <li class="nav-item">
