--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,37 +1,8 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
+/* Correct import path for Tailwind CSS */
+// @import 'components';
+//@import 'utilities';
 
- */
-
-@import 'bootstrap';
- 
- .conatiner {
-    background-color: black;
- }
-
- footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 8vh;
-    background: #fff;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 0;
-    padding: 0;
+/* Your custom styles go here */
+.container {
+  background-color: #fff;
 }
-/* 
-justify-content: center; 
-align-items: center; 
-position: fixed; left: 0; bottom: 0; width: 100%; 
-background-color: #f4f4f4; color: #757575; padding: 8px; */
