--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
-<div class="bg-light d-flex align-items-center justify-content-center" style="background-image: url('<%= asset_path('RomaniaCover.JPG') %>'); background-size: cover; background-repeat: no-repeat; width: 100%; height: 110vh; margin: 0; padding: 0; overflow-x: hidden; box-sizing: border-box;">
-    <a href="<%= root_path %>" class="navbar-brand">
-        <%= image_tag('ps-logo.png', alt: 'Pix Share Logo', class: 'logo-image', style: 'max-height: 350px; max-width: 350px; border-radius: 10px;') %>
-    </a>
+<div class="bg-light flex items-center justify-center bg-cover bg-no-repeat h-screen w-full" style="background-image: url('<%= asset_path('RomaniaCover.JPG') %>'); overflow-x: hidden; box-sizing: border-box;">
+  <a href="<%= root_path %>" class="navbar-brand">
+    <%= image_tag('ps-logo.png', alt: 'Pix Share Logo', class: 'logo-image max-h-350 max-w-350 rounded-10') %>
+  </a>
 </div>
